--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -50,6 +50,30 @@ of the error, and its residual standard error is smaller.
 
 
 
+```{r}
+myheadw<- lm(LENGTH~HEADWTH,data=bears)
+plot(LENGTH~HEADWTH,data=bears)
+abline(myheadw)
+summary.lm(myheadw)
+```
+
+In the model myheadw the adjusted R-squared has gone down and the residual standard error has gone up.  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
